[gd_scene load_steps=8 format=3 uid="uid://bxwt77dbpmvd4"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_wrwgp"]
[ext_resource type="Shader" path="res://pauseMenu.gdshader" id="2_ijcbb"]
[ext_resource type="FontFile" uid="uid://cmmsfh84jhs03" path="res://Esperanto SmallCaps Regular.ttf" id="3_2y6wc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6yfld"]
shader = ExtResource("2_ijcbb")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_1gi33"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dua60"]
resource_name = "blurmenu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.87]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2w2rb"]
_data = {
"RESET": SubResource("Animation_1gi33"),
"blurmenu": SubResource("Animation_dua60")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wrwgp")

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_6yfld")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184567
anchor_top = 0.17718
anchor_right = 1.18457
anchor_bottom = 1.17718
offset_right = -719.0
offset_bottom = -404.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2y6wc")
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="Load" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2y6wc")
theme_override_font_sizes/font_size = 40
text = "Load"

[node name="Exit" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_2y6wc")
theme_override_font_sizes/font_size = 40
text = "Save & Exit"

[node name="blurAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2w2rb")
}

[connection signal="pressed" from="PanelContainer/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
